Updated styles on subscribe section and fixed some issues on firefox.

--- a/bathroom-happiness/sass/_global.scss
+++ b/bathroom-happiness/sass/_global.scss
@@ -102,9 +102,21 @@ body.bathroom-happiness {
   .panel-slideshow {
     position: relative;
     height: 335px;
-
+    @media (min-width: $screen-md-min) {
+    	height: 351px;
+    }
+		@media (min-width: $screen-lg-min) {
+			height: 335px;
+      	
+     }
     .slideshow-container {
       height: 273px;
+      @media (min-width: $screen-md-min) {
+      	height: 290px;
+      }
+      @media (min-width: $screen-lg-min) {
+      	height: 273px;
+      }
       padding-top: 10px;
     }
 
